<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.weeklytips.MainActivity">

    <TextView
...
        android:layout_marginRight="8dp"
        android:freezesText="true"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:text="@string/intro_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/run_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/run_button"
...
