...
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"/>

    <EditText
        android:id="@+id/etValue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPrompt"
...
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@android:string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnOk"
        app:layout_constraintRight_toLeftOf="@+id/btnOk"/>

    <Button
        android:id="@+id/btnOk"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
...
