<resources>
    <string name="app_name">Weekly Tips</string>
    <string name="title_run_code">Run code</string>
    <string name="title_clear">Clear log</string>
    <string name="intro_text">Use a virtual device with Google Play</string>
</resources>
